Sat May 22 12:14:15 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>

        * DAnCE/LocalityManager/Daemon/Locality_Manager.mpc:

          Had Name_Utilites.h, instad of Name_Utilites.cpp.

Sat May 22 12:12:08 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>

        * DAnCE/LocalityManager/Daemon/Deployment_Interceptors.h:

          Windows linking fix.

Sat May 22 11:52:13 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>

        * DAnCE/MPC/config/dance_locality_manager.mpb:

          Static linking fix.

Fri May 21 23:17:01 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>

        * tests/IDL_Test/Keywords/Keywords.mpc:
        * tests/IDL3/Lookup/lookup_test.mpc:

          Removed the temporary 'dummy_label' tags added to these
          projects while bug fixes were in progress.

Fri May 21 21:32:11 UTC 2010  Adam Mitz  <mitza@ociweb.com>

        * NEWS:

          Documented "make install"

Fri May 21 21:07:20 UTC 2010  Adam Mitz  <mitza@ociweb.com>

        * DAnCE/Deployment/Deployment_Core.mpc:

          Reinstated installation info that was lost in the merge.

Fri May 21 20:01:32 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>

        * DAnCE/DAnCE/DAnCE_Properties.idl:
        * DAnCE/LocalityManager/Daemon/Deployment_Interceptors.h:
        * DAnCE/LocalityManager/Daemon/Deployment_Interceptors.cpp:
        * DAnCE/LocalityManager/Daemon/Locality_Manager_Impl.h:
        * DAnCE/LocalityManager/Daemon/Locality_Manager_Impl.cpp:
        * DAnCE/LocalityManager/Daemon/Locality_Manager_Task.cpp:
        * DAnCE/LocalityManager/Handler/LocalityActivator_Impl.cpp:
        * DAnCE/NodeApplication/NodeApplication_Impl.h:
        * DAnCE/NodeApplication/NodeApplication_Impl.cpp:

          Added capability to pass selected instance naming context to
          LocalityManager, so non naming service enabled deployments
          won't stall out trying to resolve a naming server.
